# qt_robot

./: LICENSE.md  README.md  README.rst
docs/: conf.py  index.rst  qt_basics.rst  setup.rst  setup_body.rst  setup_head.rst  troubleshooting.rst
qt_face_tracking/: CMakeLists.txt  package.xml
qt_nuitrack_app/: CMakeLists.txt
qt_nuitrack_msgs/: CMakeLists.txt  package.xml
qt_robot/launch/: cordial.launch
qt_robot_config/: CMakeLists.txt  config.yaml
qt_robot_interfaces/qt_motors_controller/: CMakeLists.txt
qt_robot_nuc/: CMakeLists.txt
qt_robot_nuc/scripts/: start_face_client.py
qt_robot_pi/: CMakeLists.txt  package.xml
qt_robot_pi/autostart_scripts/: start_cordial_face.sh  start_usc.sh
qt_robot_pi/launch/: qt_robot_pi.launch
scripts/: nuc_setup.bash  pi_setup.bash
src/qt_face_tracking/: CMakeLists.txt  package.xml  setup.py
src/qt_face_tracking/scripts/: face_tracker.py
src/qt_robot/: CMakeLists.txt  package.xml
src/qt_robot_config/: package.xml
src/qt_robot_interfaces/qt_motors_controller/: package.xml
src/qt_robot_interfaces/qt_nuitrack_app/: package.xml
src/qt_robot_nuc/: package.xml
src/qt_robot_nuc/launch/: qt_robot_nuc.launch
src/qt_robot_nuc/scripts/: start_face_client.py
src/qt_robot_pi/autostart_scripts/: start_usc.sh
src/qt_robot_pi/launch/: qt_robot_pi.launch
src/qt_robot_pi/scripts/: start_face_server.py
src/qt_simulator/: CMakeLists.txt  package.xml
src/qt_simulator/launch/: display.launch  display_python.launch  urdf_visualize.launch  xacro_visualize.launch
src/qt_simulator/scripts/: gestures_play_client.py  parse_xml.py  state_publisher.py
src/qt_simulator/src/: state_publisher.cpp
src/qt_simulator/srv/: gestures_play.srv
src/qt_simulator/urdf/: mira_simple.urdf
