<?xml version="1.0"?>
<package format="2">
  <name>qt_robot_pi</name>
  <version>0.0.0</version>
  <description>The qt_robot_pi package</description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
