<?xml version="1.0"?>
<package format="2">
  <name>qt_face_tracking</name>
  <version>0.0.0</version>
  <description>The qt_face_tracking package</description>
  <maintainer email="audrow@hey.com">Audrow Nash</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
