<?xml version="1.0"?>
<package format="2">
  <name>qt_motors_controller</name>
  <version>1.0.0</version>
  <description>Message definitions for QT's Motor Controller</description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

</package>
